search working basic css done.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
     </section>
     <section class="search">
       <form class="search-form">
-        
+        <label for="searchField">Search by song or artist:</label>
+        <input type="text" name="" value="" id="searchField">
+        <button type="button" name="button" id="submitButton">Search!</button>
       </form>
     </section>
-    <section class="results"></section>
+    <br>
+    <section class="resultsArea">
+
+    </section>
   </div>
   <script src="main.js"></script>
 </body>
