adding video play and making players sticky

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
       <h1>Really Awesome Music Site</h1>
     </header>
     <section class="player">
-      <audio class="music-player" controls="controls" src="" autoplay="false"></audio>
+      <div class="">
+      <audio id="music-player" controls="controls" src="" autoplay="false"></audio>
+    </div>
+    <div>
+      <video id="video-player" controls="controls" src="" autoplay="false" poster="posterimage.jpg"></video>
+    </div>
     </section>
     <section class="search">
       <form class="search-form">
