rename html and players stick and toggle vis

--- a/iTunesIndex.html
+++ b/iTunesIndex.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>iTunes Music Search</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div class="container">
     <header>
       <h1>Really Awesome Music Site</h1>
     </header>
-    <section class="player">
-      <div class="">
+    <!-- <section> -->
+    <div class="player">
       <audio id="music-player" controls="controls" src="" autoplay="false"></audio>
     </div>
-    <div>
+    <div class="player">
       <video id="video-player" controls="controls" src="" autoplay="false" poster="posterimage.jpg"></video>
     </div>
-    </section>
+    <!-- </section> -->
     <section class="search">
       <form class="search-form">
         <label for="searchField">Search by song or artist:</label>
@@ -31,4 +33,5 @@
   </div>
   <script src="main.js"></script>
 </body>
+
 </html>
