--- a/iTunesIndex.html
+++ b/iTunesIndex.html
@@ -11,24 +11,27 @@
     <header>
       <h1>Really Awesome Music Site</h1>
     </header>
-    <!-- <section> -->
-    <div class="player">
-      <audio id="music-player" controls="controls" src="" autoplay="false"></audio>
+    <div class="tabs">
+      <h3 class="songs" id="songTab">Songs</h3>
+      <h3 class="videos" id="videoTab">Videos</h3>
+      <h3 class="podcasts" id="podcastTab">Podcasts</h3>
     </div>
-    <div class="player">
-      <video id="video-player" controls="controls" src="" autoplay="false" poster="posterimage.jpg"></video>
-    </div>
-    <!-- </section> -->
-    <section class="search">
-      <form class="search-form">
-        <label for="searchField">Search by song or artist:</label>
-        <input type="text" name="" value="" id="searchField">
-        <button type="button" name="button" id="submitButton">Search!</button>
-      </form>
-    </section>
-    <br>
-    <section class="resultsArea">
-
+    <section id="songSection">
+      <section id="search">
+        <form class="search-form">
+          <label class="songs" for="searchField">Search by song or artist:</label>
+          <label class="videos" for="searchField">Search by movie or show:</label>
+          <label class="podcasts" for="searchField">Search by podcast or host:</label>
+          <input type="text" name="" value="" id="searchField">
+          <button type="button" name="button" id="submitButton">Search!</button>
+        </form>
+      </section>
+      <section id="players">
+        <audio class="player" id="music-player" controls="controls" src="" autoplay="false"></audio>
+        <video class="player" id="video-player" controls="controls" src="" autoplay="false"></video>
+      </section>
+      <section id="resultsArea">
+      </section>
     </section>
   </div>
   <script src="main.js"></script>
